syntax = "proto3";

package vuong.app.v1.user;
option java_package = "com.vuong.app.v1.user";
option java_multiple_files = true;
option java_outer_classname = "UserProto";

import "common.proto";

enum GrpcAuthProvider {
  AUTH_PROVIDER_UNSPECIFIED = 0;
  AUTH_PROVIDER_LOCAL = 1;
  AUTH_PROVIDER_FACEBOOK = 2;
  AUTH_PROVIDER_GOOGLE = 3;
  AUTH_PROVIDER_GITHUB = 4;
}

message GrpcUser {
  string user_id = 1;
  string name = 2;
  optional string avt_url = 3;
  optional string bio = 4;
  string email = 5;
  optional string password = 6;
  bool verified = 7;
  GrpcAuthProvider provider = 8;
  optional string provider_id = 9;
  string created_at = 10;
  string updated_at = 11;
}

message GrpcUpdateUserByUserIdRequest {
  string user_id = 1;
  string name = 2;
  string avt_url = 3;
  string bio = 4;
}

message GrpcUpdateUserByUserIdResponse {
  string user_id = 1;
}

message GrpcExistsUserByEmailRequest {
  string email = 1;
}

message GrpcExistsUserByEmailResponse {
  bool exists = 1;
}

message GrpcGetUserByUserIdRequest {
  string user_id = 1;
}

message GrpcGetUserByUserIdResponse {
  GrpcUser result = 1;
}

message GrpcGetUserByEmailRequest {
  string email = 1;
}

message GrpcGetUserByEmailResponse {
  GrpcUser result = 1;
}

service UserService {
  rpc updateUserByUserId(GrpcUpdateUserByUserIdRequest) returns (GrpcUpdateUserByUserIdResponse);
  rpc existsUserByEmail(GrpcExistsUserByEmailRequest) returns (GrpcExistsUserByEmailResponse);
  rpc getUserByUserId(GrpcGetUserByUserIdRequest) returns (GrpcGetUserByUserIdResponse);
  rpc getUserByEmail(GrpcGetUserByEmailRequest) returns (GrpcGetUserByEmailResponse);
}